<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="username">Username</string>
    <string name="_1">1</string>
    <string name="hosico_cat">hosico_cat</string>
    <string name="hosico_cat_u2022_original_audio">hosico_cat • Original Audio</string>
    <string name="_1_33">1:33</string>
    <string name="liked_by_omame_munchkin_and_2_462_others">Liked by omame_munchkin and 2.462 others</string>
    <string name="view_all_15_comments">View all 15 comments</string>
    <string name="pisco_cat_when_you_are_eating_your_french_fries_in_peace_your_girlfriend_be_like">pisco_cat When you are eating your French fries in peace.... Your girlfriend be like</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="_5_days_ago">5 days ago</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="search">Search</string>
    <string name="reel">Reel</string>
    <string name="account">Account</string>
    <string name="sponsored">Sponsored</string>
    <string name="follow">Follow</string>

    <string-array name="search_feeds">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>
</resources>