<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_off"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_off"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add_post"
        android:title="@string/post" />

    <item
        android:id="@+id/navigation_reel"
        android:icon="@drawable/ic_reel_off"
        android:title="@string/reel" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_home_off"
        android:title="@string/account" />

</menu>