<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vLine">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgInstagramLogo"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/intagram_text_logo" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgChat"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="16dp"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/imgInstagramLogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgInstagramLogo"
                app:srcCompat="@drawable/ic_chat" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txChatNotif"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/bg_circle_red"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/imgChat"
                app:layout_constraintTop_toTopOf="@id/imgChat"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgLove"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="18dp"
                android:padding="2dp"
                app:layout_constraintBottom_toBottomOf="@id/imgChat"
                app:layout_constraintEnd_toStartOf="@id/imgChat"
                app:layout_constraintTop_toTopOf="@id/imgChat"
                app:srcCompat="@drawable/ic_love" />

            <View
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/bg_circle_red"
                app:layout_constraintEnd_toEndOf="@id/imgLove"
                app:layout_constraintTop_toTopOf="@id/imgLove" />

            <include
                android:id="@+id/story1"
                layout="@layout/item_story_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgInstagramLogo" />

            <include
                android:id="@+id/story2"
                layout="@layout/item_story_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                app:layout_constraintStart_toEndOf="@id/story1"
                app:layout_constraintTop_toTopOf="@id/story1" />

            <include
                android:id="@+id/story3"
                layout="@layout/item_story_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                app:layout_constraintStart_toEndOf="@id/story2"
                app:layout_constraintTop_toTopOf="@id/story1" />

            <View
                android:id="@+id/vStory4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_corner40_grey"
                app:layout_constraintStart_toEndOf="@id/story3"
                app:layout_constraintTop_toTopOf="@id/story1" />

            <View
                android:id="@+id/vStory5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="14dp"
                android:background="@drawable/bg_corner40_grey"
                app:layout_constraintStart_toEndOf="@id/vStory4"
                app:layout_constraintTop_toTopOf="@id/story1" />

            <View
                android:id="@+id/vStory6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="14dp"
                android:background="@drawable/bg_corner40_grey"
                app:layout_constraintStart_toEndOf="@id/vStory5"
                app:layout_constraintTop_toTopOf="@id/story1" />

            <View
                android:id="@+id/vLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/dummy_grey"
                app:layout_constraintTop_toBottomOf="@id/story1" />

            <include
                android:id="@+id/imgProfile"
                layout="@layout/profile_image_story_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vLine" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/hosico_cat"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/txSubtitle"
                app:layout_constraintStart_toEndOf="@id/imgProfile"
                app:layout_constraintTop_toTopOf="@id/imgProfile"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hosico_cat_u2022_original_audio"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/imgProfile"
                app:layout_constraintStart_toStartOf="@id/txUserName"
                app:layout_constraintTop_toBottomOf="@id/txUserName" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgMore"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:paddingVertical="12dp"
                app:layout_constraintBottom_toBottomOf="@id/imgProfile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imgProfile"
                app:srcCompat="@drawable/ic_more" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgVerified"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toBottomOf="@id/txUserName"
                app:layout_constraintStart_toEndOf="@id/txUserName"
                app:layout_constraintTop_toTopOf="@id/txUserName"
                app:srcCompat="@drawable/ic_verified" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgFeed"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="14dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/imgProfile"
                app:srcCompat="@drawable/cat" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/_1_33"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/imgFeed"
                app:layout_constraintTop_toTopOf="@id/imgFeed" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgSound"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_circle_black_overlay"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@id/imgFeed"
                app:layout_constraintEnd_toEndOf="@id/imgFeed"
                app:srcCompat="@drawable/ic_no_sound"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgFeedLove"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="@id/imgFeed"
                app:layout_constraintTop_toBottomOf="@id/imgFeed"
                app:srcCompat="@drawable/ic_love" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgComment"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toEndOf="@id/imgFeedLove"
                app:layout_constraintTop_toTopOf="@id/imgFeedLove"
                app:srcCompat="@drawable/ic_comment" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgShare"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toEndOf="@id/imgComment"
                app:layout_constraintTop_toTopOf="@id/imgFeedLove"
                app:srcCompat="@drawable/ic_share" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBookmark"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="@id/imgFeed"
                app:layout_constraintTop_toTopOf="@id/imgFeedLove"
                app:srcCompat="@drawable/ic_bookmark" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgLover2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:padding="1dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="@id/imgLover1"
                app:layout_constraintStart_toStartOf="@id/imgLover1"
                app:layout_constraintTop_toTopOf="@id/imgLover1"
                app:shapeAppearanceOverlay="@style/Circular"
                app:srcCompat="@drawable/cat"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgLover1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:padding="1dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgFeedLove"
                app:shapeAppearanceOverlay="@style/Circular"
                app:srcCompat="@drawable/cat"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txLiked"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="16dp"
                android:text="@string/liked_by_omame_munchkin_and_2_462_others"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/imgLover1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/imgLover2"
                app:layout_constraintTop_toTopOf="@id/imgLover1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txCaption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/pisco_cat_when_you_are_eating_your_french_fries_in_peace_your_girlfriend_be_like"
                android:textSize="15sp"
                app:layout_constraintTop_toBottomOf="@id/imgLover1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txViewComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/view_all_15_comments"
                android:textColor="@color/tx_grey"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txCaption" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgAddComment"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txViewComment"
                app:shapeAppearanceOverlay="@style/Circular"
                app:srcCompat="@drawable/cat" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txAddComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/add_a_comment"
                android:textColor="@color/tx_grey"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/imgAddComment"
                app:layout_constraintStart_toEndOf="@id/imgAddComment"
                app:layout_constraintTop_toTopOf="@id/imgAddComment" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txPostTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="6dp"
                android:text="@string/_5_days_ago"
                android:textColor="@color/tx_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgAddComment" />

            <View
                android:id="@+id/vAction"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_corner10_grey"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txPostTime" />

            <View
                android:id="@+id/vCaption"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_corner10_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vAction" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
